--- a/NestCountsImputation_W.Rmd
+++ b/NestCountsImputation_W.Rmd
@@ -7,7 +7,7 @@ output: html_document
 rm(list=ls())
 knitr::opts_chunk$set(echo = TRUE)
 source("HILL_BiOp_functions.R")
-run.date <- "2018-10-19"
+run.date <- "2018-10-22"
 ```
 
 This document describes how leatherback turtle nest count data were imputed for Wermon. All models were ran separately and results stored in .rds files. 
@@ -60,7 +60,7 @@ M1.loo.out <- M$jags.out$loo.out$loo.out
 M1.jm <- M$jags.out$jm
 ```
 
-Diagnostics of the expected log predictive density indicated that the model had poor predictive power, where the majority of estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+Diagnostics of the expected log predictive density indicated that the model had poor predictive power, where the majority of estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M1, fig.cap = "Figure. PSIS diagnostic plot for M1"}
 plot(M1.loo.out)
@@ -81,7 +81,7 @@ M2.loo.out <- M$jags.out$loo.out$loo.out
 M2.jm <- M$jags.out$jm
 ```
 
-Diagnostics of the expected log predictive density indicated that the model was considerably better than the first model. Many of estimated Pareto k parameter was less than 0.7 (```r sum(M2.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M2.loo.out$diagnostics$pareto_k)```).Although ```r sum(M2.loo.out$diagnostics$pareto_k > 0.7)``` were greater than 0.7.  Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+Diagnostics of the expected log predictive density indicated that the model was considerably better than the first model. Many of estimated Pareto k parameter was less than 0.7 (```r sum(M2.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M2.loo.out$diagnostics$pareto_k)```).Although ```r sum(M2.loo.out$diagnostics$pareto_k > 0.7)``` were greater than 0.7.  Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
 
 ```{r PSIS_M2, fig.cap="Figure. PSIS diagnostic plot for M2"}
 plot(M2.loo.out)
@@ -103,7 +103,7 @@ M3.jm <- M$jags.out$jm
 
 ```
 
-Almost all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
+Almost all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
 
 ```{r PSIS_M3, fig.cap="Figure. PSIS diagnostic plot for M3"}
 plot(M3.loo.out)
@@ -125,7 +125,7 @@ M4.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M4.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M4.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M4.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M4.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M4, fig.cap="Figure. PSIS diagnostic plot for M4"}
 plot(M4.loo.out)
@@ -133,6 +133,7 @@ plot(M4.loo.out)
 
 ##Model 5
 In Model 5, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
+
 m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
@@ -146,7 +147,7 @@ M5.jm <- M$jags.out$jm
 
 ```
 
-Majority of estimated Pareto k parameter values were large, where ```r sum(M5.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M5.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+Majority of estimated Pareto k parameter values were large, where ```r sum(M5.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M5.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M5, fig.cap="Figure. PSIS diagnostic plot for M5"}
 plot(M5.loo.out)
@@ -154,6 +155,7 @@ plot(M5.loo.out)
 
 ##Model 6
 In Model 6, a unique slope and variance parameters were given to each month. 
+
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
@@ -167,7 +169,7 @@ M6.jm <- M$jags.out$jm
 
 ```
 
-Majority of estimated Pareto k parameters were large, where ```r sum(M6.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M6.loo.out$diagnostics$pareto_k)``` were > 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+Majority of estimated Pareto k parameters were large, where ```r sum(M6.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M6.loo.out$diagnostics$pareto_k)``` were > 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M6, fig.cap="Figure. PSIS diagnostic plot for M6"}
 plot(M6.loo.out)
@@ -179,6 +181,7 @@ plot(M6.loo.out)
 
 ##Model 7
 In Model 7, a unique slope parameter was given to each month, whereas there were two variance2. 
+
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise. 
@@ -192,7 +195,7 @@ M7.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M7.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M7.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M7.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M7.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M7, fig.cap="Figure. PSIS diagnostic plot for M7"}
 plot(M7.loo.out)
@@ -200,6 +203,7 @@ plot(M7.loo.out)
 
 ##Model 8
 Model 8, a unique slope parameter was given to each month, whereas there was one variance. 
+
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro), 
@@ -212,14 +216,14 @@ M8.loo.out <- M$jags.out$loo.out$loo.out
 M8.jm <- M$jags.out$jm
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M8.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M8.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M8.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M8.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r PSIS_M8, fig.cap="Figure. PSIS diagnostic plot for M7"}
+```{r PSIS_M8, fig.cap="Figure. PSIS diagnostic plot for M8"}
 plot(M8.loo.out)
 ```
 
 ##Model 9
-Model 9 is similar to the first model but uses a different distribution for the state model; the observation is  modeled with t distribution. No seasonal change in variance or slope is considered. 
+Model 9 is similar to Model 1 but uses a different distribution for the state model; the observation is  modeled with t distribution. No seasonal change in variance or slope is considered. 
 
 m[t] = s + x[t-1]
 
@@ -233,7 +237,7 @@ M9.loo.out <- M$jags.out$loo.out$loo.out
 M9.jm <- M$jags.out$jm
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M9.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M9.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M9.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M9.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M9, fig.cap="Figure. PSIS diagnostic plot for M9"}
 plot(M9.loo.out)
@@ -254,7 +258,7 @@ M10.loo.out <- M$jags.out$loo.out$loo.out
 M10.jm <- M$jags.out$jm
 ```
 
-Many of estimated Pareto k parameter was less than 0.7 (```r sum(M10.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M10.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+Many of estimated Pareto k parameter was greater than 0.7 (```r sum(M10.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M10.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
 
 ```{r PSIS_M10, fig.cap="Figure. PSIS diagnostic plot for M10"}
 plot(M10.loo.out)
@@ -276,7 +280,7 @@ M11.jm <- M$jags.out$jm
 
 ```
 
-Majority of estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
+Majority of estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
 
 ```{r PSIS_M11} 
 plot(M11.loo.out)
@@ -298,7 +302,7 @@ M12.jm <- M$jags.out$jm
 
 ```
 
-There were many large estimated Pareto k parameter values, where ```r sum(M12.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M12.loo.out$diagnostics$pareto_k)``` were larger than 0.7.  Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were many large estimated Pareto k parameter values, where ```r sum(M12.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M12.loo.out$diagnostics$pareto_k)``` were larger than 0.7.  Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M12}
 plot(M12.loo.out)
@@ -306,6 +310,7 @@ plot(M12.loo.out)
 
 ##Model 13
 In Model 13, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
+
 m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
@@ -319,13 +324,14 @@ M13.jm <- M$jags.out$jm
 
 ```
 
-There were many large estimated Pareto k parameter values, where ```r sum(M13.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M13.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were many large estimated Pareto k parameter values, where ```r sum(M13.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M13.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M13}
 plot(M13.loo.out)
 ```
 
 In Model 14, a unique slope and variance parameters were given to each month. 
+
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
@@ -339,7 +345,7 @@ M14.jm <- M$jags.out$jm
 
 ```
 
-There were many large estimated Pareto k parameter values, where ```r sum(M14.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M14.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were many large estimated Pareto k parameter values, where ```r sum(M14.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M14.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r}
 plot(M14.loo.out)
@@ -347,6 +353,7 @@ plot(M14.loo.out)
 
 ##Model 15
 In Model 15, a unique slope parameter was given to each month, whereas there were two variances. 
+
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise.
@@ -360,7 +367,7 @@ M15.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M15.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M15.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M15.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M15.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r}
 plot(M15.loo.out)
@@ -368,6 +375,7 @@ plot(M15.loo.out)
 
 ##Model 16
 In Model 16, a unique slope parameter was given to each month, whereas there was one variance. 
+
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro), 
@@ -381,7 +389,7 @@ M16.jm <- M$jags.out$jm
 
 ```
 
-Several large estimated Pareto k parameter values were found, where ```r sum(M16.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M16.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+Several large estimated Pareto k parameter values were found, where ```r sum(M16.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M16.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M16, fig.cap="Figure. PSIS diagnostic plot for M16."}
 plot(M16.loo.out)
@@ -404,7 +412,7 @@ y[t] ~ t(x[t], v.obs, df)
 
 The posterior distributions of the model are shown below.
 
-```{r posterior_M15, fig.cap="Figure. Posterior distribuitons of slope parameters for M16"}
+```{r posterior_M15, fig.cap="Figure. Posterior distribuitons of slope parameters for M15"}
 bayesplot::mcmc_dens(M15.jm$samples, c("theta.1[1]", "theta.1[2]", "theta.1[3]", "theta.1[4]",
                                       "theta.1[5]", "theta.1[6]", "theta.1[7]", "theta.1[8]",
                                       "theta.1[9]", "theta.1[10]", "theta.1[11]", "theta.1[12]"))
@@ -416,12 +424,13 @@ bayesplot::mcmc_dens(M15.jm$samples, c("sigma.pro1", "sigma.pro2", "sigma.obs", 
 
 The slope parameters indicated increasing trend to July and decreased from August through November. 
 
-We use this model to impute missing data points.
+We use this model to impute missing data points. First, just look at the 2006-2014 dataset. 
 
 ```{r}
+M15 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_", run.date, ".rds"))
 
-Xs.stats <- M$Xs.stats
-ys.stats <- M$ys.stats
+Xs.stats <- M15$Xs.stats
+ys.stats <- M15$ys.stats
 p.1 <- ggplot() +
   #geom_point(data = ys.stats,
   #           aes(x = time, y = mode_y), color = "blue") +
@@ -436,6 +445,9 @@ p.1 <- ggplot() +
   geom_line(data = Xs.stats,
             aes(x = time, y = exp(median_X)), color = "red",
             alpha = 0.5) +
+  geom_line(data = Xs.stats,
+            aes(x = time, y = exp(low_X)), color = "red",
+            linetype = 2) +
   geom_point(data = ys.stats,
              aes(x = time, y = obsY), color = "green",
              alpha = 0.5)
@@ -447,37 +459,150 @@ Then, combine all counts per year.
 
 ```{r }
 # need to pool counts per nesting season - not by calendar year
-Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) -> Xs.stats
-yrs <- as.matrix(unique(Xs.stats$season))
+Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+  mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> Xs.stats
+ys.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+  mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> ys.stats
 
-X.posteriors.yr <- lapply(apply(yrs, 
+seasons <- as.matrix(unique(Xs.stats$season))
+
+X.posterior.seasons <- lapply(apply(seasons, 
                                 MARGIN = 1,
                                 FUN = extract.posterior.jagsUI, 
                                 Xs.stats = Xs.stats, 
-                                samples = M$jm$samples),
+                                samples = M15.jm$samples),
                           FUN = function(x) exp(x$samples) %>% rowSums())
 
-Xs.year <- as.data.frame(matrix(unlist(lapply(X.posteriors.yr, 
+Xs.season <- as.data.frame(matrix(unlist(lapply(X.posterior.seasons, 
                                               FUN = quantile,
                                               c(0.025, 0.5, 0.975))),
                                 ncol = 3, byrow = T)) 
-colnames(Xs.year) <- c("low", "median", "high")
-Xs.year <-mutate(Xs.year, 
-                 year = yrs)
+colnames(Xs.season) <- c("low", "median", "high")
+Xs.season <-mutate(Xs.season, 
+                   season= seasons)
 
-ys.stats %>% group_by(year) %>%
-  summarize(obs = sum(obsY, na.rm = T)) -> ys.yr
+ys.stats %>% group_by(season) %>%
+  summarize(obs = sum(obsY, na.rm = T)) -> ys.season
 
-p.JM.estimated.counts <- ggplot() + 
-  geom_point(data = Xs.year,
-             aes(x = year, y = median))+
-  geom_errorbar(data = Xs.year,
-                aes(x = year, ymin = low, ymax = high)) + 
-  geom_point(data = ys.yr,
-             aes(x = year, y = obs),
+p.W.estimated.counts <- ggplot() + 
+  geom_point(data = Xs.season,
+             aes(x = season, y = median))+
+  geom_errorbar(data = Xs.season,
+                aes(x = season, ymin = low, ymax = high)) + 
+  geom_point(data = ys.season,
+             aes(x = season, y = obs),
              color = "red") +
-  labs(title = 'Jamursba-Medi', x = '', y = "Nest counts")
+  labs(title = 'Wermon', x = 'Season', y = "Nest counts")
 
-print(p.JM.estimated.counts)
+print(p.W.estimated.counts)
+```
+
+Then, bring in the results for the entire dataset. 
+```{r}
+run.date1 <- "2018-10-23"
+M15 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2017_", run.date1, ".rds"))
+
+M15$Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+  mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> Xs.stats
+
+M15$ys.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+  mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> ys.stats
+
+seasons <- as.matrix(unique(Xs.stats$season))
+
+p.1 <- ggplot() +
+  #geom_point(data = ys.stats,
+  #           aes(x = time, y = mode_y), color = "blue") +
+  #geom_line(data = Xs.stats,
+  #          aes(x = time, y = mode_X), color = 'blue') +
+  geom_line(data = Xs.stats,
+            aes(x = time, y = exp(high_X)), color = "red",
+            linetype = 2) +
+  geom_point(data = Xs.stats,
+             aes(x = time, y = exp(median_X)), color = "red",
+             alpha = 0.5) +
+  geom_line(data = Xs.stats,
+            aes(x = time, y = exp(median_X)), color = "red",
+            alpha = 0.5) +
+  geom_line(data = Xs.stats,
+            aes(x = time, y = exp(low_X)), color = "red",
+            linetype = 2) +
+  geom_point(data = ys.stats,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5) +
+  labs(title = "Wermon", y = "Nest counts", x = "Time")
+
+print(p.1)
+```
+
+Split between summer and winter. 
+```{r}
+X.posterior.seasons <- lapply(apply(seasons, 
+                                    MARGIN = 1,
+                                    FUN = extract.posterior.jagsUI, 
+                                    Xs.stats = Xs.stats, 
+                                    samples = M15$jags.out$jm$samples),
+                              FUN = function(x){
+                                n.summer <- exp(x$samples[, x$summer == 1]) %>% rowSums() 
+                                n.winter <- exp(x$samples[, x$summer == 0]) %>% rowSums() 
+                                return(data.frame(summer = n.summer, winter = n.winter))
+                              } )
+
+
+Xs.season <- as.data.frame(matrix(unlist(lapply(X.posterior.seasons, 
+                                                FUN = function(x){
+                                                  qtiles <- apply(x, 
+                                                                  MARGIN = 2,
+                                                                  FUN = quantile, 
+                                                                  probs = c(0.025, 0.5, 0.975))})),
+                                  ncol = 6, byrow = T))
+
+colnames(Xs.season) <- c("Summer.low", "Summer.median", "Summer.high",
+                         "Winter.low", "Winter.median", "Winter.high")
+Xs.season <-mutate(Xs.season, 
+                   season= seasons)
+
+ys.stats %>% group_by(season, summer) %>%
+  summarize(obs = sum(obsY, na.rm = T)) -> tmp.y.season
+
+ys.season <- data.frame(season = seasons,
+                        summer = unlist(c(NA, as.vector(filter(tmp.y.season, summer == 1)[, "obs"]))),
+                        winter = unlist(filter(tmp.y.season, summer == 0)[, "obs"]))
+  
+p.W.estimated.counts <- ggplot() + 
+  geom_point(data = Xs.season,
+             aes(x = season, 
+                 y = Summer.median), 
+             color = "red")+
+  geom_errorbar(data = Xs.season,
+                aes(x = season, 
+                    ymin = Summer.low, 
+                    ymax = Summer.high), 
+                color = "red") + 
+  geom_point(data = ys.season,
+             aes(x = season, 
+                 y = summer),
+             color = "green") +
+  geom_point(data = Xs.season,
+             aes(x = season+0.5, 
+                 y = Winter.median), 
+             color = "blue")+
+  geom_errorbar(data = Xs.season,
+                aes(x = season+0.5, 
+                    ymin = Winter.low, 
+                    ymax = Winter.high), 
+                color = "blue") + 
+  geom_point(data = ys.season,
+             aes(x = season+0.5, 
+                 y = winter),
+             color = "green") +
+  
+  labs(title = 'Wermon', x = 'Season', y = "Nest counts")
+
+print(p.W.estimated.counts)
+
+write.csv(Xs.season, file = "data/estimatedX_M15.csv",
+          quote = F, row.names = F)
+
 ```
 
